# likho-ai

./: .gitignore  CLAUDE.md  COSTS.md  DECISIONS.md  MISTAKES.md  PRD-COMPACT.md  PROMPTS.md  README.md  SETUP.md  SKILLS.md  TODO.md
desktop/: index.html  package-lock.json  package.json  tailwind.config.js
desktop/src/: App.tsx  index.css  main.tsx  updater.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio.rs  lib.rs  main.rs
proxy/: .dev.vars.example  .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml
proxy/src/: index.ts
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: FoundingSpotsBadge.tsx  InteractiveMockup.tsx  RazorpayCheckout.tsx  RazorpayProPlusSubscribe.tsx  RazorpayProSubscribe.tsx  Section.tsx  WaitlistForm.tsx
web/lib/: api.ts  razorpay.ts
