[package]
name = "likho-ai-desktop"
version = "0.1.2"
description = "Likho.ai - AI writing overlay for Indian professionals"
authors = ["Chetan"]
edition = "2021"

[lib]
name = "likho_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
arboard = "3"
# Native Windows blur (Acrylic / Mica). CSS backdrop-filter only blurs DOM
# content, not the OS desktop, so the "frosted glass over desktop" effect
# requires a Windows API call. window-vibrancy wraps DwmEnableBlurBehind /
# SetWindowCompositionAttribute / DwmSetWindowAttribute.
window-vibrancy = "0.6"
